# kunsthaus

./: CLAUDE.md  Cargo.toml  README.md  flake.nix  index.html  index.scss  rust-toolchain.toml
.github/workflows/: ci.yaml
assets/models/shaderHall/: shaderHall.gltf
assets/shaders/: custom.wgsl  sdf_text.wgsl
src/: environment.rs  main.rs  paintings.rs  sdf_text.rs  shader.rs  touch.rs  typography.rs
